# Matrix_Manipulator

./: .gitignore  LICENSE  README.md  _secret_auth_.json  algorithmes.py  creds.py  home_matrix.html  index.html  main.py  matrix.csv  matrix56.csv  navbar.py  pyproject.toml  script.js  style.css  test.py
.streamlit/: config.toml
Version_Steramlit/: algorithmes.py  main.py
assets/token/: _secret_auth_.json
assets/token/matrices/: test.csv  test.json  test_Cholesky_2024_11_30_22_46_18.csv  test_Cholesky_2024_12_01_13_42_49.csv  test_Cholesky_2024_12_01_20_05_39.csv  test_Cholesky_2024_12_01_20_08_16.csv  test_Cholesky_2024_12_01_22_09_22.csv  test_Cholesky_2024_12_01_23_26_02.csv  test_Cholesky_2024_12_01_23_27_16.csv  test_Cholesky_2024_12_01_23_28_50.csv  test_Cholesky_2024_12_01_23_32_16.csv  test_Cholesky_2024_12_01_23_41_33.csv  test_Cholesky_2024_12_02_00_01_08.csv  test_Cholesky_2024_12_02_00_09_41.csv  test_Inverse_2024_12_01_00_00_05.csv  test_Resolution_2024_12_01_20_57_27.csv  test_Resolution_2024_12_01_20_59_47.csv  test_Resolution_2024_12_01_21_00_12.csv  test_Resolution_2024_12_01_21_01_44.csv  test_Resolution_2024_12_01_21_02_14.csv  test_Resolution_2024_12_01_21_51_35.csv  test_Resolution_2024_12_01_21_54_37.csv  test_Resolution_2024_12_01_23_43_06.csv  test_Solve AX = B_2024_11_29_23_17_35.csv  test_Solve AX = B_2024_11_29_23_23_34.csv  (+10 more)
pages/: __init__.py  account.py  home.py
pagess/: AboutUs.py  __init__.py  account.py  home.py  user_guide.py  utils.py  widgets.py
styles/: index.css  style.css
utils/: utils.py
widgets/: widgets.py
