[tool.poetry]
name = "matrix-manipulator"
version = "0.1.0"
description = "Cholesky decomposition calculator"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit-navigation-bar = "^3.3.0"
streamlit = "1.33.0"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
