[tool.poetry]
name = "matrix-manipulator"
version = "0.1.0"
description = "Cholesky decomposition calculator"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit-navigation-bar = "^3.3.0"
streamlit = "1.33.0"
numpy = "1.26.4"
streamlit-cookies-manager = "0.2.0"
streamlit-lottie = "0.0.5"
streamlit-option-menu = "0.3.0"
trycourier = "4.4.0"
altair = "5.4.1"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
